Fixing some icons spacing

--- a/src/output.css
+++ b/src/output.css
@@ -640,7 +640,6 @@ video {
 }
 
 .card{
-  margin: 0.5rem;
   height: 120px;
   width: 100px;
   border-radius: 0.5rem;
@@ -651,7 +650,7 @@ video {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  --tw-shadow-color: #2C2D32;
+  --tw-shadow-color: #333439;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -1169,10 +1168,6 @@ video {
   list-style-position: outside;
 }
 
-.list-disc{
-  list-style-type: disc;
-}
-
 .appearance-none{
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -1492,8 +1487,12 @@ video {
   justify-items: stretch;
 }
 
-.gap-1{
-  gap: 0.25rem;
+.gap-4{
+  gap: 1rem;
+}
+
+.gap-5{
+  gap: 1.25rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
@@ -1816,10 +1815,6 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-lg{
-  border-radius: 0.5rem;
-}
-
 .rounded-md{
   border-radius: 0.375rem;
 }
@@ -1971,16 +1966,6 @@ video {
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-color-1{
-  --tw-bg-opacity: 1;
-  background-color: rgb(232 231 236 / var(--tw-bg-opacity));
-}
-
-.bg-color-2{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 169 74 / var(--tw-bg-opacity));
-}
-
 .bg-custom-bg-1{
   --tw-bg-opacity: 1;
   background-color: rgb(44 45 50 / var(--tw-bg-opacity));
@@ -1994,6 +1979,10 @@ video {
 .bg-red-500{
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-custom-bg-2\/20{
+  background-color: rgb(51 52 57 / 0.2);
 }
 
 .decoration-slice{
@@ -2110,15 +2099,6 @@ video {
   padding: 0.5rem;
 }
 
-.p-1{
-  padding: 0.25rem;
-}
-
-.px-0{
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -2137,11 +2117,6 @@ video {
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.py-12{
-  padding-top: 3rem;
-  padding-bottom: 3rem;
 }
 
 .pb-8{
@@ -2558,10 +2533,14 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-xl{
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.shadow-color-2{
+  --tw-shadow-color: #E5A94A;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-color-1{
+  --tw-shadow-color: #E8E7EC;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .outline-none{
@@ -2772,11 +2751,6 @@ video {
   }
 }
 
-.hover\:bg-color-2:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 169 74 / var(--tw-bg-opacity));
-}
-
 .hover\:font-bold:hover{
   font-weight: 700;
 }
@@ -2809,12 +2783,21 @@ video {
     display: flex;
   }
 
+  .sm\:h-screen{
+    height: 100vh;
+  }
+
   .sm\:max-w-\[768px\]{
     max-width: 768px;
   }
 
   .sm\:grid-cols-6{
     grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
+  .sm\:py-0{
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 
   .sm\:underline{
@@ -2850,10 +2833,6 @@ video {
 
   .md\:scroll-mt-0{
     scroll-margin-top: 0px;
-  }
-
-  .md\:gap-2{
-    gap: 0.5rem;
   }
 
   .md\:px-4{
